[package]
name = "mepeyew"
version = "0.1.0"
edition = "2021"
description = "mepeyew - Small But Powerful Graphics Library"
repository = "https://github.com/davnotdev/mepeyew"
homepage = "https://github.com/davnotdev/mepeyew"
license = "BSD-2-Clause"
keywords = ["gamedev", "graphics"]

[features]
default = [
    # "vulkan",
    "webgpu",
    "assert_extensions",
    "surface_extension",
    "shader_reflection_extension",
]
vulkan = ["dep:ash", "dep:gpu-allocator", "dep:raw-window-metal"]
webgpu = ["dep:wasm-bindgen", "dep:web-sys"]
assert_extensions = []
surface_extension = ["dep:raw-window-handle"]
shader_reflection_extension = ["dep:spirv-reflect"]

[dev-dependencies]
winit = "0.28.1"
stb_image_rust = "2.27.2"

[dependencies]
#  vulkan
ash = { version = "0.37.0", optional = true }
gpu-allocator = { version = "0.21.0", optional = true }

#  surface_extension
raw-window-handle = { version = "0.5.0", optional = true }

#  shader_reflection_extension
spirv-reflect = { version = "0.2.3", optional = true }

#  webgpu
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
#  vulkan
raw-window-metal = { version = "0.3", optional = true }
