[package]
name = "web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2"
mepeyew = { version = "*", path = "../../", default-features = false, features = ["webgpu", "assert_extensions"] }
